--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.10.5",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13"
   }
 }
